# model2vec

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  train_gensim.py
.github/workflows/: ci.yaml  release.yaml
assets/: model_card_template.md
docs/: README.md  integrations.md  usage.md  what_is_model2vec.md
evaluation/: utilities.py
evaluation/mteb_runner/: __main__.py  calculate_baseline.py  encoders.py  summarize.py  utilities.py
evaluation/pearl_benchmark/: __main__.py  probing.py
evaluation/word_sim_benchmarks/: __main__.py  tasks.jsonl  utilities.py
evaluation/word_sim_benchmarks/data/: all_vocab.txt  card_660.txt  men.txt  mturk_771.txt  rel353.txt  simLex.txt  simverb_3500.txt
korok/: encoders.py  utils.py
korok/model2vec/: __main__.py  encoders.py  infer.py  tokenizer.py  utils.py
model2vec/: __init__.py  create_counts.py  data.py  hf_utils.py  infer.py  logging_config.py  m2v.py  model.py  model2vec.py  model_card_template.md  quantization.py  utils.py  version.py  vocabulary_quantization.py
model2vec/distill/: __init__.py  __main__.py  distillation.py  inference.py  tokenizer.py  utils.py
model2vec/inference/: README.md  __init__.py  model.py  trained.py
model2vec/knowledge_distill/: README.md  __init__.py  featurize.py  knowledge_distillation.py  utils.py
model2vec/model/: encoders.py  tokenizer.py  utilities.py
model2vec/modelcards/: __init__.py  classifier_template.md  model_card_template.md  modelcards.py
model2vec/persistence/: __init__.py  datamodels.py  hf.py  persistence.py
model2vec/tokenizer/: __init__.py  datamodels.py  model.py  normalizer.py  pretokenizer.py  tokenizer.py
model2vec/train/: README.md  __init__.py  base.py  classifier.py  dataset.py  featurize.py  lightning_modules.py  similarity.py  tokenlearn.py  train_loop.py  utils.py
model2vec/trained_model/: README.md  __init__.py  trained.py
requirements/: requirements-linux.txt  requirements-macos.txt
results/: README.md  make_speed_vs_mteb_plot.py
scripts/: export_to_onnx.py
tests/: conftest.py  test_distillation.py  test_dummy.py  test_inference.py  test_model.py  test_persistence.py  test_quantization.py  test_tokenizer.py  test_trainable.py  test_utils.py
tests/data/test_tokenizer/: tokenizer.json  tokenizer_config.json
tutorials/: README.md  recipe_search.ipynb  semantic_chunking.ipynb  semantic_deduplication.ipynb  train_classifier.ipynb
