[project]
name = "korok"
description = "Amazing static embeddings"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "click",
    "datasets",
    "evaluation@git+https://github.com/MinishLab/evaluation@main",
    "numpy<2.0.0",
    "pretokenizers@git+https://github.com/MinishLab/pretokenizers@main",
    "reach",
    "rich",
    "scikit-learn",
    "sentence_transformers",
    "tokenizers",
    "torch",
    "tqdm",
    "transformers",
    "typer",
    "wordfreq",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["korok"]

[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-coverage",
    "ruff",
]

[tool.ruff]
exclude = [".venv/"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    # Annotations: Enforce type annotations
    "ANN",
    # Complexity: Enforce a maximum cyclomatic complexity
    "C90",
    # Pydocstyle: Enforce docstrings
    "D",
    # Isort: Enforce import order
    "I",
    # Numpy: Enforce numpy style
    "NPY",
    # Print: Forbid print statements
    "T20",
]
ignore = [
    # Allow self and cls to be untyped, and allow Any type
    "ANN101", "ANN102", "ANN401",
    # Pydocstyle ignores
    "D100", "D101", "D104", "D203", "D212", "D401",
    # Allow use of f-strings in logging
    "G004"
]

[tool.pydoclint]
style = "sphinx"
exclude = "test_"
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false
require-return-section-when-returning-nothing = false

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm
